--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@ngrx/effects": "^13.1.0",
+    "@ngrx/store": "^13.1.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "rxjs": "~7.5.0",
