--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ngrx/effects": "^13.1.0",
     "@ngrx/store": "^13.1.0",
+    "@ngrx/store-devtools": "^13.1.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "redux-devtools-extension": "^2.13.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
