--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-devtools-extension": "^2.13.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "tw-elements": "^1.0.0-alpha12",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
