--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store-devtools": "^13.1.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "ngx-build-plus": "^13.0.1",
     "redux-devtools-extension": "^2.13.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -48,6 +49,9 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss-import": "^14.1.0",
+    "postcss-loader": "^6.2.1",
+    "postcss-scss": "^4.0.3",
     "tailwindcss": "^3.0.23",
     "typescript": "~4.5.2"
   }
