--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "ngx-build-plus": "^13.0.1",
+    "ngx-pagination": "^5.1.1",
     "redux-devtools-extension": "^2.13.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
