--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
     "@ngrx/store-devtools": "^13.1.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "html-to-pdfmake": "^2.3.11",
+    "jspdf": "^2.5.1",
     "ngx-build-plus": "^13.0.1",
     "ngx-pagination": "^5.1.1",
+    "ngx-print": "^1.2.1",
+    "pdfmake": "^0.2.5",
     "redux-devtools-extension": "^2.13.9",
     "rxjs": "~7.5.0",
+    "save": "^2.5.0",
     "tslib": "^2.3.0",
     "tw-elements": "^1.0.0-alpha12",
     "zone.js": "~0.11.4"
