--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-to-pdfmake": "^2.3.11",
     "jspdf": "^2.5.1",
     "ngx-build-plus": "^13.0.1",
+    "ngx-dropzone": "^3.1.0",
     "ngx-pagination": "^5.1.1",
     "ngx-print": "^1.2.1",
     "pdfmake": "^0.2.5",
