--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store-devtools": "^13.1.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "angular-favicon": "^1.0.9",
     "html-to-pdfmake": "^2.3.11",
     "jspdf": "^2.5.1",
     "ngx-build-plus": "^13.0.1",
